--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon *"
+        "dev": "nodemon *",
+        "sync": "browser-sync start --config bs-config.js"
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "connect-livereload": "^0.6.1",
+        "ejs": "^3.1.9",
         "express": "^4.18.3",
+        "livereload": "^0.9.3",
         "mongoose": "^8.2.1",
         "mongoosh": "^0.0.7",
         "nodemon": "^3.1.0"
